Add simple api and web ui

--- a/settings.ini
+++ b/settings.ini
@@ -4,6 +4,7 @@ MQTT_listen = False
 MQTT_update = False
 num_retries = 3
 update_interval = 3
+
 [TV]
 host = 
 port =
@@ -11,6 +12,7 @@ apiv =
 user = 
 pass = 
 protocol = 
+
 [MQTT]
 host = 
 port = 
@@ -20,3 +22,9 @@ TLS = False
 cert_path =
 topic_pylips = 
 topic_status = 
+
+[API]
+python_path = /usr/local/bin/python3.8
+host = 0.0.0.0
+port = 80
+debug = True
